cmake_minimum_required(VERSION 4.1)
project(Clase14_01_26)

set(CMAKE_CXX_STANDARD 20)

add_executable(Clase14_01_26 main.cpp
        MatrizEnteros.cpp
        MatrizEnteros.h
        MatrizOperaciones.cpp
        MatrizOperaciones.h
        Puntuaciones.cpp
        Puntuaciones.h
        Temperaturas.cpp
        Temperaturas.h
        Inventario.cpp
        Inventario.h
        Horario.cpp
        Horario.h
        SalaCine.cpp
        SalaCine.h)
